--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,47 +1,96 @@
-body	{
-	font-size:	16px;
-	color:	black;
-	background-color:	white;
+.container-fluid{
+	margin: 0;
+	padding: 0;
 }
 
-h1	{
-	font-size:	2em;
+.navbar{
+	border-radius: 0px;
+	background-color: rgba(0,0,0,0.8);
 }
 
-h2	{
-	font-size:	1.5em;
-	margin-bottom:	25px;
+.navbar-brand{
+  font-size: 35px;
+  color: white;
+  padding-left: 25px;
 }
 
-h3	{
-	font-size:	1.25em;
-}
-#mainsection	{
-		background-color:	#D3D3D3;
-		margin:	1px,solid,black;
-		height:	1000px;
+.navbar-brand:hover{
+	color: white;
 }
 
+.nav{
+	margin: 0;
+	padding: 0;
+}
 
-#mynav #brand 	{
-	width:	100%;
-	background-color:	#D3D3D3;
-}
-#nav-list {
-  margin-top: 10px;
-  color:	black;
-}
-#nav-list a {
+.navbar-nav{
+  font-size: 25px;
   text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
+  margin: 0;
+  padding: 0;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  margin: 1px solid black;
+.navbar-toggle{
+	border: 2px solid white;
+	margin-right: 25px;
 }
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
+
+.icon-bar{
+	background-color: white;
+}
+
+
+.main-title{
+  margin-bottom: 15px;
+  text-align: center;
+  color: #ff4532;
+  font-size: 50px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-weight: bold;
+}
+
+li{
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.menu-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
+}
+
+.menu-item:hover{
+	background-color: rgba(0,0,0,0.9);
+	color: rgba(0,0,0,0.4);
+}
+
+
+
+.row{
+	margin: 20px;
+}
+
+.content-box{
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+.item-name{
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#top{
+
 }
