--- a/site/CSS/style.css
+++ b/site/CSS/style.css
@@ -9,6 +9,7 @@ h1 {
     font-weight:300;
     letter-spacing: 2px;
     font-size:48px;
+    color: blue;
 }
 
 p {
@@ -24,7 +25,7 @@ p {
     background: linear-gradient(60deg,
     rgb(62, 62, 62) 0%,
     rgb(245, 245, 245) 100%);
-    color: #000000;
+    color:00487C;
 }
 
 .inner-header {
