--- a/site/CSS/style.css
+++ b/site/CSS/style.css
@@ -24,7 +24,7 @@ p {
     background: linear-gradient(60deg,
     rgb(62, 62, 62) 0%,
     rgb(245, 245, 245) 100%);
-    color: #000000;
+    color: #00487C;
 }
 
 .inner-header {
